Fix padding on smaller devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,6 +35,7 @@ article, section {
 [class*="col-"] {
     float: left;
     padding-left: 15px;
+    padding-right: 15px;
     
 }
 
@@ -114,8 +115,6 @@ a.button:hover, .button:hover {
     margin-left: 8.33%;
 }
 
-
-
 /* Small Devices */
 @media (min-width: 600px) {
     .container {
@@ -130,7 +129,7 @@ a.button:hover, .button:hover {
     }
 }
 
-/* Laptops/Desktops */
+/* Tablets */
 @media (min-width: 992px) {
     .container {
         max-width: 992px;
@@ -140,7 +139,7 @@ a.button:hover, .button:hover {
     }
 }
 
-/* Extra Large Screens */
+/*  Desktop Etc*/
 @media (min-width: 1200px) {
     .container {
         max-width: 1200px;
